--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -527,8 +527,11 @@ span.text-red {
   transform:scale(1.1,1.1)
 }
 .quantity-desc{
+  display: flex;
   border: 1px solid gray;
-  padding: 6px;
+  padding-inline: 6px;
+  align-items: center;
+  flex-direction: row;
 }
 .quantity-desc span{
   font-size: 16px;
@@ -536,11 +539,11 @@ span.text-red {
   cursor: pointer;
 }
 .quantity-desc .minus{
-  border-right: 1px solid gray;
   color: #f02d34;
 }
 .quantity-desc .num{
   border-right: 1px solid gray;
+  border-left: 1px solid gray;
   font-size: 20px;
 }
 .quantity-desc .plus{
