--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -280,6 +280,10 @@ span.text-red {
 
 }
 .cart-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   height: 100vh;
   width: 600px;
   background-color: white;
@@ -342,6 +346,7 @@ span.text-red {
   overflow: auto;
   max-height: 70vh;
   padding: 20px 10px;
+  flex-grow: 2;
 }
 .product{
   display: flex;
@@ -386,12 +391,11 @@ span.text-red {
   border: none;
 }
 .cart-bottom{
-  position: absolute;
+  /*position: absolute;*/
   bottom: 12px;
   right: 5px;
   width: 100%;
-  padding: 30px 65px;
-
+  padding: 20px 65px;
 }
 
 .btn-container{
