--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,10 +5,14 @@ body, * {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   box-sizing: border-box;
-
 }
 ::-webkit-scrollbar {
   width: 0;
+}
+
+html,
+body {
+  height: 100%;
 }
 
 a {
@@ -20,11 +24,11 @@ a {
   max-width: 1400px;
   margin: auto;
   width: 100%;
-
 }
 
 .layout{
   padding: 10px;
+  height: 100%;
 }
 
 .navbar-container{
@@ -475,7 +479,7 @@ span.text-red {
 }
 .reviews p{
   color: #324d67;
-  margin-top: 0px;
+  margin-top: 0;
 }
 .product-detail-desc .price{
   font-weight: 700 ;
@@ -576,14 +580,14 @@ span.text-red {
   color: #f02d34;
 }
 .success-wrapper, .cancel-wrapper{
+  display: flex;
   background-color: white;
   min-height: 60vh;
 
 }
 .success, .cancel{
   width: 1000px;
-  margin: auto;
-  margin-top: 160px;
+  margin: 3rem auto 0;
   background-color: #dcdcdc;
   padding: 50px;
   border-radius: 15px;
@@ -599,7 +603,7 @@ span.text-red {
 }
 .success h2{
   text-transform: capitalize;
-  margin-top: 15px 0px;
+  margin-top: 15px;
   font-weight: 900;
   font-size: 40px;
   color:#324d67;
@@ -752,7 +756,6 @@ span.text-red {
     width: 550%;
   }
   .success-wrapper, .cancel-wrapper{
-
     min-height: 69vh;
   }
   .success, .cancel {
