--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -272,12 +272,13 @@ span.text-red {
   font-size: 14px;
   font-weight: 300;
 }
-.cart-wrapper{
-  width: 100vw;
-  background: rgba(0, 0, 0, 0.5);
+.cart-wrapper-tint{
   position: fixed;
   right: 0;
   top: 0;
+  width: 100vw;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
   z-index: 100;
   /* will-change: transform; */
   transition: all 1s ease-in-out;
@@ -287,14 +288,14 @@ span.text-red {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
+  position: fixed;
+  top: 0;
+  right: 0;
   height: 100vh;
   width: 600px;
   background-color: white;
-  float: right;
   padding: 40px 10px;
-  position: relative;
-
+  z-index: 110;
 }
 
 .footer-container{
