--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -197,6 +197,7 @@ span.text-red {
     right: 20%;
     width: 450px;
     height: 450px;
+    object-fit: contain;
 }
 
 
@@ -288,6 +289,7 @@ span.text-red {
     left: 8%; */
     top: -25%;
     left: 25%;
+    object-fit: contain;
 }
 
 .banner-desc .right {
@@ -905,6 +907,7 @@ span.text-red {
         height: 50%;
         top: 14%;
         right: 4%;
+        object-fit: contain;
     }
 
     .footer-banner-image {
@@ -912,6 +915,7 @@ span.text-red {
         left: 30%;
         top: 6%;
         height: 56%;
+        object-fit: contain;
     }
 
     .hero-banner-container h1 {
