--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -404,6 +404,7 @@ span.text-red {
     display: flex;
     gap: 30px;
     padding: 20px;
+    justify-content: center;
 }
 
 .product .cart-product-image {
@@ -930,6 +931,18 @@ span.text-red {
     .footer-banner-container {
         height: 600px;
         margin-top: 80px;
+    }
+
+    .cart-bottom .btn-container {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .cart-container {
+        width: 100%;
+        height: 100%;
     }
 }
 
