--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -511,6 +511,7 @@ span.text-red {
     display: flex;
     gap: 10px;
     margin-top: 20px;
+    flex-wrap: wrap;
 }
 
 .small-image {
@@ -738,7 +739,6 @@ span.text-red {
     /*    height: 560px;*/
     /*    margin-top: 80px;*/
     /*}*/
-
     .footer-banner-image {
         width: 58%;
         left: 10%;
@@ -957,6 +957,29 @@ span.text-red {
     .hero-banner-container h1 {
         font-size: 60px;
         margin-left: -10px;
+    }
+
+    .image-wrapper {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .image-container {
+        display: flex;
+        width: 100%;
+    }
+
+    .product-detail-container .product-detail-image {
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 1/1;
+    }
+
+    .product-detail-desc {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
     }
 
     .footer-banner-image {
