--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -511,7 +511,7 @@ span.text-red {
     display: flex;
     gap: 10px;
     margin-top: 20px;
-    flex-wrap: wrap;
+    overflow: scroll hidden;
 }
 
 .small-image {
